--- a/templates/find_get.html
+++ b/templates/find_get.html
@@ -20,7 +20,7 @@
           >Enter the data do you want to find: <input type="text" name="data"
         /></label>
       </div>
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Find" />
     </form>
   </body>
 </html>
