--- a/templates/find_post.html
+++ b/templates/find_post.html
@@ -7,6 +7,13 @@
     <title>Document</title>
   </head>
   <body>
+    <button>
+      <a
+        href="http://127.0.0.1:5000"
+        style="font-size: 24px; color: rgb(16, 172, 5)"
+        >Main page</a
+      >
+    </button>
     <h2>Find one record</h2>
     <div style="border: 2px solid #000">
       <h3>ID: {{ record['_id'] }}</h3>
