--- a/templates/index.html
+++ b/templates/index.html
@@ -6,23 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <body style="text-align: center">
     <h2>Hello, I am a personal assistant!</h2>
     <div>
       <button>
-        <a href="http://127.0.0.1:5000/records">Show all records</a>
+        <a
+          href="http://127.0.0.1:5000/records"
+          style="font-size: 24px; color: rgb(16, 172, 5)"
+          >Show all records</a
+        >
       </button>
       <button>
-        <a href="http://127.0.0.1:5000/add">Add record</a>
+        <a
+          href="http://127.0.0.1:5000/add"
+          style="font-size: 24px; color: rgb(16, 172, 5)"
+          >Add record</a
+        >
       </button>
       <button>
-        <a href="http://127.0.0.1:5000/find">Find record</a>
+        <a
+          href="http://127.0.0.1:5000/find"
+          style="font-size: 24px; color: rgb(16, 172, 5)"
+          >Find record</a
+        >
       </button>
       <button>
-        <a href="http://127.0.0.1:5000/delete">Delete record</a>
+        <a
+          href="http://127.0.0.1:5000/delete"
+          style="font-size: 24px; color: rgb(16, 172, 5)"
+          >Delete record</a
+        >
       </button>
       <button>
-        <a href="http://127.0.0.1:5000/update">Update record</a>
+        <a
+          href="http://127.0.0.1:5000/update"
+          style="font-size: 24px; color: rgb(16, 172, 5)"
+          >Update record</a
+        >
       </button>
     </div>
   </body>
