--- a/templates/records.html
+++ b/templates/records.html
@@ -7,7 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>All records</h2>
+    <button>
+      <a
+        href="http://127.0.0.1:5000"
+        style="font-size: 24px; color: rgb(16, 172, 5)"
+        >Main page</a
+      >
+    </button>
+    <h2>Records page</h2>
     {% for record in records %}
     <div style="border: 2px solid #000">
       <h3>ID: {{ record['_id'] }}</h3>
